--- a/main.html
+++ b/main.html
@@ -1,16 +1,102 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>HTML Assignment 3</title>
+  <style>
+    .middle {
+      border: 1px solid black;
+      border-collapse: collapse;
+      spacing: 1px;
+      padding: 1px;
+    }
+    .middle td, .middle th {
+      border: 1px solid black;
+      padding: 1px;
+    }
+    .center {
+      text-align: center;
+    }
+    .right {
+      text-align: right;
+    }
+    .green {
+      background-color: green;
+    }
+    .blue {
+      background-color: blue;
+    }
+    h1 {
+      text-align: center;
+    }
+  </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+  <h1>HTML Assignment #3</h1>
+
+  <!-- Table 1 -->
+  <table id="table-1" class="middle">
+    <tr>
+      <td id="t11">Row 1, Col 1</td>
+      <td id="t12">Row 1, Col 2</td>
+      <td id="t13" class="right">Row 1, Col 3</td>
+    </tr>
+    <tr class="center">
+      <td>Row 2, Col 1</td>
+      <td>Row 2, Col 2</td>
+      <td class="right">Row 2, Col 3</td>
+    </tr>
+    <tr>
+      <td>Row 3, Col 1</td>
+      <td>Row 3, Col 2</td>
+      <td class="right">Row 3, Col 3</td>
+    </tr>
+  </table>
+
+  <br>
+
+  <!-- Table 2 -->
+  <table id="table-2" class="middle">
+    <tr>
+      <td id="t21" colspan="6">Header Cell Spanning 6 Columns</td>
+    </tr>
+    <tr>
+      <td>2,1</td><td>2,2</td><td>2,3</td><td>2,4</td><td>2,5</td><td>2,6</td>
+    </tr>
+    <tr>
+      <td>3,1</td><td>3,2</td><td>3,3</td><td>3,4</td><td>3,5</td><td>3,6</td>
+    </tr>
+    <tr>
+      <td>4,1</td><td>4,2</td><td>4,3</td><td>4,4</td><td>4,5</td><td>4,6</td>
+    </tr>
+    <tr>
+      <td>5,1</td><td>5,2</td><td>5,3</td><td>5,4</td><td>5,5</td><td>5,6</td>
+    </tr>
+    <tr>
+      <td>6,1</td><td>6,2</td><td>6,3</td><td>6,4</td><td>6,5</td><td>6,6</td>
+    </tr>
+  </table>
+
+  <br>
+
+  <!-- Table 3 -->
+  <table id="table-3" class="middle">
+    <tr class="green">
+      <td>Top Left</td><td colspan="4">Header Row</td><td>Top Right</td>
+    </tr>
+    <tr>
+      <td>Row 2</td><td>Data</td><td>Data</td><td>Data</td><td>Data</td><td>Data</td>
+    </tr>
+    <tr>
+      <td>Row 3</td><td>Data</td><td>Data</td><td id="t-image" colspan="3">
+        <img src="https://via.placeholder.com/100" alt="Sample Image">
+      </td>
+    </tr>
+    <tr class="blue">
+      <td>Bottom Left</td><td colspan="4">Footer Row</td><td>Bottom Right</td>
+    </tr>
+  </table>
 
 </body>
-
 </html>
