--- a/main.html
+++ b/main.html
@@ -42,10 +42,10 @@
       <td id="t12">Row 1, Col 2</td>
       <td id="t13" class="right">Row 1, Col 3</td>
     </tr>
-    <tr class="center">
-      <td>Row 2, Col 1</td>
-      <td>Row 2, Col 2</td>
-      <td class="right">Row 2, Col 3</td>
+    <tr>
+      <td class="center">Row 2, Col 1</td>
+      <td class="center">Row 2, Col 2</td>
+      <td class="center right">Row 2, Col 3</td>
     </tr>
     <tr>
       <td>Row 3, Col 1</td>
@@ -89,8 +89,9 @@
       <td>Row 2</td><td>Data</td><td>Data</td><td>Data</td><td>Data</td><td>Data</td>
     </tr>
     <tr>
-      <td>Row 3</td><td>Data</td><td>Data</td><td id="t-image" colspan="3">
-        <img src="https://via.placeholder.com/100" alt="Sample Image">
+      <td>Row 3</td><td>Data</td><td>Data</td>
+      <td id="t-image" colspan="3">
+        <img src="https://user-images.githubusercontent.com/78348500/217435540-555a8eb0-79a6-4590-90c0-28b620341d42.png" alt="Table Image" width="100">
       </td>
     </tr>
     <tr class="blue">
