--- a/main.html
+++ b/main.html
@@ -4,13 +4,12 @@
   <meta charset="UTF-8">
   <title>HTML Assignment 3</title>
   <style>
-    .middle {
+    table.middle {
       border: 1px solid black;
-      border-collapse: collapse;
-      spacing: 1px;
+      border-spacing: 1px;
       padding: 1px;
     }
-    .middle td, .middle th {
+    td {
       border: 1px solid black;
       padding: 1px;
     }
@@ -32,25 +31,24 @@
   </style>
 </head>
 <body>
-
   <h1>HTML Assignment #3</h1>
 
   <!-- Table 1 -->
   <table id="table-1" class="middle">
     <tr>
-      <td id="t11">Row 1, Col 1</td>
-      <td id="t12">Row 1, Col 2</td>
-      <td id="t13" class="right">Row 1, Col 3</td>
+      <td id="t11">Cell 1</td>
+      <td id="t12">Cell 2</td>
+      <td id="t13" class="right">Cell 3</td>
+    </tr>
+    <tr class="center">
+      <td>Cell 4</td>
+      <td>Cell 5</td>
+      <td class="right">Cell 6</td>
     </tr>
     <tr>
-      <td class="center">Row 2, Col 1</td>
-      <td class="center">Row 2, Col 2</td>
-      <td class="center right">Row 2, Col 3</td>
-    </tr>
-    <tr>
-      <td>Row 3, Col 1</td>
-      <td>Row 3, Col 2</td>
-      <td class="right">Row 3, Col 3</td>
+      <td>Cell 7</td>
+      <td>Cell 8</td>
+      <td class="right">Cell 9</td>
     </tr>
   </table>
 
@@ -59,7 +57,7 @@
   <!-- Table 2 -->
   <table id="table-2" class="middle">
     <tr>
-      <td id="t21" colspan="6">Header Cell Spanning 6 Columns</td>
+      <td id="t21" colspan="6">Header spanning 6 columns</td>
     </tr>
     <tr>
       <td>2,1</td><td>2,2</td><td>2,3</td><td>2,4</td><td>2,5</td><td>2,6</td>
@@ -83,19 +81,17 @@
   <!-- Table 3 -->
   <table id="table-3" class="middle">
     <tr class="green">
-      <td>Top Left</td><td colspan="4">Header Row</td><td>Top Right</td>
+      <td colspan="3">Green Row</td>
     </tr>
     <tr>
-      <td>Row 2</td><td>Data</td><td>Data</td><td>Data</td><td>Data</td><td>Data</td>
-    </tr>
-    <tr>
-      <td>Row 3</td><td>Data</td><td>Data</td>
-      <td id="t-image" colspan="3">
-        <img src="https://user-images.githubusercontent.com/78348500/217435540-555a8eb0-79a6-4590-90c0-28b620341d42.png" alt="Table Image" width="100">
+      <td>Text A</td>
+      <td id="t-image">
+        <img src="https://via.placeholder.com/100" alt="Sample Image">
       </td>
+      <td>Text B</td>
     </tr>
     <tr class="blue">
-      <td>Bottom Left</td><td colspan="4">Footer Row</td><td>Bottom Right</td>
+      <td colspan="3">Blue Row</td>
     </tr>
   </table>
 
